--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
    <h1>Etch-A-Sketch</h1>
    <div class="grid-container">
    </div>
+   <button class="reset-btn">Reset</button>
 </body>
 </html>
