--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>Etch-A-Sketch</h1>
+   <button class="custom-size-btn">Change Size</button>
    <div class="grid-container">
    </div>
    <button class="reset-btn">Reset</button>
