Add RGB + Black button feature, clean constants in .js file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
    <h1>Etch-A-Sketch</h1>
-   <button class="custom-size-btn">Change Size</button>
+   <div class="btn-container">
+      <button class="custom-size-btn">Change Size</button>
+      <button class="black-btn">Black</button>
+      <button class="rgb-btn">Random RGB</button>
+      <button class="gradient-btn">Gradient</button>
+   </div>
    <div class="grid-container">
    </div>
    <button class="reset-btn">Reset</button>
